Add image directory, finalize first recipe

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <body>
 
         <h1>Odin's Recipes</h1>
-        <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Stroganoff</a>
+
+        <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Strombanoli</a>
+
     </body>
 </html>
