--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -7,15 +7,28 @@
     </head>
 
     <body>
-        <h1>Beef Stroganoff</h1>
+        <h1>Beef Strombanoli</h1>
         
+        <img src="../images/beef-stroganoff.jpeg" alt="beef, mushrooms, and noodles in a yummy sauce" style="width:200px;height:300px;"">
+
+        <h2>Description</h2>
+        <p>
+            Beef "Strombanoli" is just my  household's version of beef stroganoff. I kept forgetting what it <br> 
+            was actually called so I would just make up a word when talking to my partner, and "strombanoli" is <br> 
+            what stuck. I play pretty fast and loose with the recipe, but it's basically just beef, mushrooms, <br>
+            and noodles in a yummy sauce. We love mushrooms and don't care all that much for meat, so this recipe <br>
+            is pretty fungi heavy.
+        </p>
+
         <h3>Ingredients</h3>
         <ul>
+            <li>olive oil</li>
+            <li>1/2 stick of butter</li>
             <li>1 onion, diced</li>
             <li>1 shallot, diced</li>
             <li>2 cups portobello mushrooms</li>
             <li>1/4 beef, sliced to preferred size</li>
-            <li>6 cloves of garlic</li>
+            <li>6 cloves of garlic, minced</li>
                 <ul>
                     <li>or however much you like, I always use more</li>
                 </ul>
@@ -24,5 +37,25 @@
             <li>1/2 cup of water</li>
             <li>1 small jar of alfredo sauce</li>
         </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>Using a high-walled saucepan, set your stove to medium heat.</li>
+            <li>Once hot, add a drizzle of olive oil and a small chunk of butter</li>
+            <li>Salt & pepper your beef, then add it to the pan and let it cook for about 5 minutes. You want a good sear on all sides</li>
+            <li>Remove the beef and set it aside, leaving as much of the oil in the pan as possible</li>
+            <li>Reduce the heat slightly and add in your onion and shallots</li>
+            <li>Cover the onion/shallot mix with the mushrooms and let everything cook down</li>
+            <li>After about 10 minutes, add salt & pepper, as well as any other seasonings you enjoy</li>
+            <li>Mix things up every few minutes to let things cook evenly</li>
+            <li>Once things have gotten soft and yummy smelling, add the water and the pasta</li>
+                <ul>
+                    <li>Cooking the pasta in with everything makes the noodles yummier!</li>
+                </ul>
+            <li>Once the noodles are cooked, things should be looking thicker. Add the alfredo sauce until you get your preferred sauce-to-food ration.</li>
+            <li>Add the beef back in right after the sauce to get warm again, along with any juices that may be in the bowl.</li>
+            <li>As for the parmesan, you can add some to the pan, or just sprinkle some on top of a serving taylor it an individuals preference</li>
+        </ol>
+
     </body>
 </html>
