--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 
         <h1>Odin's Recipes</h1>
 
-        <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Strombanoli</a>
+        <ul>
+            <li> <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Strombanoli</a> </li>
+            <li>Steak with Mashed Potatoes and Veggies</li>
+            <li>Roti/Tortillas</li>
+        </ul>
+        
 
     </body>
 </html>
