Create files for and links to new recipes

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
         <ul>
             <li> <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Strombanoli</a> </li>
-            <li>Steak with Mashed Potatoes and Veggies</li>
-            <li>Roti/Tortillas</li>
+            <li> <a href="recipes/steak.html " rel="noopener noreferrer">Steak with Mashed Potatoes and Veggies</a> </li>
+            <li> <a href="recipes/roti.html" rel="noopener noreferrer">Roti</a> </li>
         </ul>
         
 
