Setup structure for roti page

--- a/recipes/roti.html
+++ b/recipes/roti.html
@@ -7,5 +7,22 @@
 
     <body>
         <h1>Roti</h1>
+
+        <img src="../images/roti.jpeg" alt="a stack of fresh roti, similar to flour tortillas">
+        
+        <h2>Description</h2>
+        <p>
+
+        </p>
+
+        <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+
+        <ol>
+            <li></li>
+        </ol>
     </body>
 </html>
