Fill out roti recipe

--- a/recipes/roti.html
+++ b/recipes/roti.html
@@ -12,17 +12,44 @@
         
         <h2>Description</h2>
         <p>
-
+            Roti is a traditional Indian flatbread that is usually eaten with curries. It holds a<br>
+            similar place as tortillas in hispanic/south american cultures. Unlike naan, which <br>
+            is more well known, roti doesn't use any yeast and isn't served with a stuffing. It's super <br>
+            easy to make and is a great addition to most meals!
         </p>
 
+        <h3>Ingredients</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>1/2 cup flour</li>
+            <li>1 tsp oil</li>
+            <li>1/4 cup water</li>
         </ul>
 
+        <h3>Directions</h3>
         <ol>
-            <li></li>
+            <li>In a large bowl, add the flour and drizzle a small amount of oil, about a teaspoons worth</li>
+            <li>Slowly add the water until things start to come together.</li>
+                <ul>
+                    <li>
+                        You may not need the whole 1/4 cup of water, or you may need more. The important part is the consistency.
+                     </li>
+                </ul>
+            <li>Knead the mixture, adding flour or water as needed, until it no longer sticks to anything</li>
+            <li>Portion off a little ball and roll it in your palms to form a little ball</li>
+            <li>Throw some flour down and use a rolling pin to flatten it</li>
+                <ul>
+                    <li>You don't want it to be see-through, but it should be fairly thin</li>
+                    <li>This is a good time to experiment with both portion size and thickness</li>
+                </ul>
+            <li>Once you've got it flat, throw it in a pan with medium heat until little air pockets form</li>
+            <li>Flip it and let it cook until you get some nice brown spots on each side</li>
         </ol>
+        
+        <p>
+            This recipe takes some trial and error and you measure more with your heart than<br>
+            anything else. Play around with portion size and how long you cook things until you find<br>
+            a method that's perfect for you!
+        </p>
+
     </body>
 </html>
