Add to steak recipes
Add image, description, and ingredient list to steak recipe

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -7,5 +7,30 @@
 
     <body>
         <h1>Steak with Potatoes and Veggies</h1>
+
+        <img src="../images/steak.jpeg" alt="yummy steak with mashed potatoes and Veggies">
+
+        <h2>Description</h2>
+        <p>
+            Steak with mashed potatoes and veggies is a staple meal that you can customize to your personal<br>
+            preference. The steak mostly stays the same, but you can swap the veggies for whatever<br>
+            your favorite veggies are, or just what you have in the fridge. My go-to are brussle<br>
+            sprouts and asparagus, but I've used corn, carrots, mushrooms often find their way in, as well<br>
+            as broccoli, green beans, peas, whatever you got!. As for the potatoes, you can make mashed<br>
+            potatoes, baked potatoes, fries, whatever you want. For this recipe, we'll stick to my favorites,<br>
+            which are mashed potatoes with asparagus and brussle sprouts.
+        </p>
+
+        <h3>Ingredients</h3>
+        <ul>
+            <li>Steak of your choice, I usually do NY strip</li>
+            <li>4-5 russet potatoes</li>
+            <li>1/2 a bundle of asparagus</li>
+            <li>1 cup of brussle sprouts</li>
+            <li>1/2 cup of whole milk</li>
+            <li>1/2 stick of butter</li>
+            <li></li>
+            <li></li>
+        </ul>
     </body>
 </html>
