Add disclaimer to homepage

--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
             <li> <a href="recipes/roti.html" rel="noopener noreferrer">Roti</a> </li>
         </ul>
         
+        <br>
+        <br>
+        <br>
+        <br>
 
+        <h2>Disclaimer</h2>
+        <p>
+            I cook with my heart and seasonings aren't really included in the recipes. Just add<br>
+            what seasonings you enjoy and it will turn out great!
+        </p>
     </body>
 </html>
