Finalize steak recipes
Finalize steak recipe, edit image for beef stroganoff recipe

--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Steak with Potatoes and Veggies</h1>
 
-        <img src="../images/steak.jpeg" alt="yummy steak with mashed potatoes and Veggies">
+        <img src="../images/steak.jpeg" alt="yummy steak with mashed potatoes and Veggies" style="width:300px;height:300px;">
 
         <h2>Description</h2>
         <p>
@@ -18,7 +18,8 @@
             sprouts and asparagus, but I've used corn, carrots, mushrooms often find their way in, as well<br>
             as broccoli, green beans, peas, whatever you got!. As for the potatoes, you can make mashed<br>
             potatoes, baked potatoes, fries, whatever you want. For this recipe, we'll stick to my favorites,<br>
-            which are mashed potatoes with asparagus and brussle sprouts.
+            which are mashed potatoes with asparagus and brussle sprouts. This recipe does require an oven<br>
+            safe pan for the steak, but you can just cook the steak fully on the stove if needed.
         </p>
 
         <h3>Ingredients</h3>
@@ -27,8 +28,53 @@
             <li>4-5 russet potatoes</li>
             <li>1/2 a bundle of asparagus</li>
             <li>1 cup of brussle sprouts</li>
-            <li>1/2 cup of whole milk</li>
-            <li>1/2 stick of butter</li>
+            <li>1/4 cup of whole milk</li>
+            <li>1/3 stick of butter</li>
+            <li>1 tbsp olive oil</li>
         </ul>
+
+        <h3>Directions</h3>
+        <ol>
+            <li>To start, this recipe has a little prep work</li>
+                <ul>
+                    <li>Preheat your oven to 425</li>
+                    <li>
+                        Pat the steak dry and season both sides with salt & pepper. Let it chill on the counter<br>
+                        while you prep the veggies.
+                    </li>
+                    <li>Peel, rinse, and dice your potatoes</li>
+                    <li>Cut the bottoms of the brussle sprouts, remove any yucky leafs, and cut them in half</li>
+                    <li>Remove the bottoms of the asparagus. If you bend them from the bottom, they will just snap off.</li>
+                </ul>
+            <li>For the potatoes:</li>
+                <ol>
+                    <li>Add them to a pot, cover with water, and boil</li>
+                    <li>
+                        Once they're tender all the way through, strain them and return them to the<br>
+                        pot, but with the heat off
+                    </li>
+                    <li>Add the butter in small chunks along with the milk and mash</li>
+                    <li>Season with salt & pepper and you're done.</li>
+                </ol>
+            <li>For the veggies:</li>
+                <ol>
+                    <li>Add your veggies to a bowl with the oil and salt & pepper</li>
+                    <li>Toss them in the oil and spread them on a baking sheet</li>
+                    <li>Cover the baking sheet tightly with foil and bake for 20-25 minutes</li>
+                    <li>You'll bake them for an additional 10 minutes with the steak</li>
+                </ol>
+            <li>For the steak:</li>
+                <ol>
+                    <li>To a hot pan, add some oil and sear the steak on one side for about 4 minutes</li>
+                    <li>
+                        Flip the steak, cover it and put the pan in the oven with the veggies for 10 minutes.
+                   </li>
+                   <li>Remove the steak, put it on a plate, and let it rest for about 10 minutes</li>
+                </ol>
+            <li>
+                Finally, add everything to the plate with the steak. I like to pour the juices on the <br>
+                potatoes and veggies.
+            </li>
+        </ol>
     </body>
 </html>
