Fix stylesheet link, Add disclaimer styling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Odin's Recipes</title>
-        <link rel="stylesheet" href="style.css"
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
@@ -20,9 +20,13 @@
         <br>
         <br>
         <br>
+        <br>
+        <br>
+        <br>
+        <br>
 
-        <h2>Disclaimer</h2>
-        <p>
+        <p class="disclaimer title">Disclaimer</p>
+        <p class="disclaimer text">
             I cook with my heart and seasonings aren't really included in the recipes. Just add<br>
             what seasonings you enjoy and it will turn out great!
         </p>
