Rework style for disclaimer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
         <h1>Odin's Recipes</h1>
 
+        <br>
+
         <ul>
             <li> <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Strombanoli</a> </li>
             <li> <a href="recipes/steak.html " rel="noopener noreferrer">Steak with Mashed Potatoes and Veggies</a> </li>
@@ -25,10 +27,12 @@
         <br>
         <br>
 
-        <p class="disclaimer title">Disclaimer</p>
-        <p class="disclaimer text">
-            I cook with my heart and seasonings aren't really included in the recipes. Just add<br>
-            what seasonings you enjoy and it will turn out great!
-        </p>
+        <div class="disclaimer">
+            <h3>Disclaimer</h3>
+            <p id="disclaimer-body">
+                I cook with my heart and seasonings aren't really included in the recipes. Just add<br>
+                what seasonings you enjoy and it will turn out great!
+            </p>
+        </div>
     </body>
 </html>
