Add minor styling
Add style to disclaimer and recipe list

--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Beef Strombanoli</h1>
         
-        <img src="../images/beef-stroganoff.jpeg" alt="beef, mushrooms, and noodles in a yummy sauce" style="width:200px;height:300px;">
+        <img src="../images/beef-stroganoff.jpeg" alt="beef, mushrooms, and noodles in a yummy sauce" style="width:200px;height:auto;">
 
         <h2>Description</h2>
         <p>
