--- a/index.html
+++ b/index.html
@@ -13,13 +13,11 @@
         <br>
 
         <ul>
-            <li> <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Strombanoli</a> </li>
-            <li> <a href="recipes/steak.html " rel="noopener noreferrer">Steak with Mashed Potatoes and Veggies</a> </li>
-            <li> <a href="recipes/roti.html" rel="noopener noreferrer">Roti</a> </li>
+            <li class="recipe-list"> <a href="recipes/beef-stroganoff.html" rel="noopener noreferrer">Beef Strombanoli</a> </li>
+            <li class="recipe-list"> <a href="recipes/steak.html " rel="noopener noreferrer">Steak with Mashed Potatoes and Veggies</a> </li>
+            <li class="recipe-list"> <a href="recipes/roti.html" rel="noopener noreferrer">Roti</a> </li>
         </ul>
         
-        <br>
-        <br>
         <br>
         <br>
         <br>
