--- a/recipes/steak.html
+++ b/recipes/steak.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Steak with Potatoes and Veggies</h1>
 
-        <img src="../images/steak.jpeg" alt="yummy steak with mashed potatoes and Veggies" style="width:300px;height:300px;">
+        <img src="../images/steak.jpeg" alt="yummy steak with mashed potatoes and Veggies" style="width:300px;height:auto;">
 
         <h2>Description</h2>
         <p>
