Fix typo in recipe

--- a/recipes/beef-stroganoff.html
+++ b/recipes/beef-stroganoff.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li>Cooking the pasta in with everything makes the noodles yummier!</li>
                 </ul>
-            <li>Once the noodles are cooked, things should be looking thicker. Add the alfredo sauce until you get your preferred sauce-to-food ration.</li>
+            <li>Once the noodles are cooked, things should be looking thicker. Add the alfredo sauce until you get your preferred sauce-to-food ratio.</li>
             <li>Add the beef back in right after the sauce to get warm again, along with any juices that may be in the bowl.</li>
             <li>As for the parmesan, you can add some to the pan, or just sprinkle some on top of a serving taylor it an individuals preference</li>
         </ol>
